# Insufficient-Gibbs-Sampling

./: .gitignore  IQR.py  LICENSE.txt  MAD.py  Paper_ABC.ipynb  Paper_Weibull.ipynb  Quantile.py  README.md  cauchy_post.py  figure6_Weibull.ipynb  figure_4_Normal.ipynb  filosofi.ipynb  normal_post.py  package-lock.json  package.json  pyproject.toml  setup.cfg  truncated.py  weibull_post.py
.github/workflows/: test.yml
Figures/: figure5_ABC.ipynb  figure_4_Normal.ipynb  figure_5_ABC.ipynb
InsufficientGibbs/: Distribution.py  Model.py  Variable.py
Old Version/: Quantile.py  postertior_sample.py
RobustGibbs/: IQR.py  MAD.py  Quantile.py  __init__.py  posterior.py  truncated.py
RobustGibbsObject/: Distribution.py
Tests/: IQR_test.ipynb  test_IQR.ipynb  test_MAD.ipynb
figures/: BF_Poiss_NegBin.ipynb  Normal_Laplace.py  Paper_Gauss_Laplae.ipynb  Paper_Poiss_Geo.ipynb  figure_4_Normal.ipynb  figure_5_ABC.ipynb  figure_6_Gauss_Laplace.ipynb  figure_6_Weibull.ipynb  figure_7_Poisson_Geometric.ipynb  figure_8_Real_Data.ipynb  figures_slides.ipynb  filosofi.ipynb  filosofi_contes.ipynb  test_BF_Poiss_NegBin.ipynb  test_cluster.py  test_object.ipynb  test_pareto.ipynb
figures/RobustGibbsObject/: Model.py  __init__.py
src/InsufficientGibbs/: Distribution.py  Model.py  Models.py  README.md  __init__.py  figure_4_Normal.ipynb  test_pareto.ipynb
src/InsufficientGibbs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: BF_Bin_NegBin.ipynb  BF_Normal_Laplace.ipynb  Paper_Poiss_Geo.ipynb  filosofi.ipynb  filosofi_reunion.ipynb
