[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "InsuficientGibbs"
version = "1.0.0"
authors = [
  { name="Antoine Luciano", email="antoine.luciano@dauphine.eu" },
]
description = "Insufficient Gibbs Sampling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AntoineLuciano/Insufficient-Gibbs-Sampling"