[metadata]
name = InsufficientGibbs
description = Package for performing Bayesian inference with insufficient and robust statistics
long_description_content_type = text/markdown
url = https://github.com/AntoineLuciano/Insufficient-Gibbs-Sampling
project_urls =
    Bug Tracker = https://github.com/AntoineLuciano/Insufficient-Gibbs-Sampling/issues
    Changelog = https://github.com/AntoineLuciano/Insufficient-Gibbs-Sampling/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Statisticians

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point